# arm-6dof-sim-inverse-kinematics

./: README  README.md
arm/: CMakeLists.txt  package.xml
arm/config/: joint_names_arm.yaml
arm/meshes/: base_link.STL  hand.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL
arm/urdf/: arm.csv  arm.urdf
moveit_client/: CMakeLists.txt  README  package.xml
moveit_client/launch/: client.launch.py
moveit_client/src/: moveit_client_node.cpp
moveit_config/: .setup_assistant  README  package.xml
moveit_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  urdf.ros2_control.xacro  urdf.srdf  urdf.urdf.xacro
moveit_config/launch/: demo.launch.py
urdf_sim_6dof/: CMakeLists.txt  package.xml
urdf_sim_6dof/config/: joint_names_urdf.yaml
urdf_sim_6dof/launch/: display.launch
urdf_sim_6dof/meshes/: base_link.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL
urdf_sim_6dof/urdf/: urdf.csv  urdf.urdf
