<package format="3">
  <name>arm</name>
  <version>1.1.0</version>
  <description>
    <p>URDF Description package for arm</p>
    <p>This package contains configuration data, 3D models and launch files
for arm robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="pancholikshitij94@gmail.com">kp</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>